--- a/SuperProjectQ.csproj
+++ b/SuperProjectQ.csproj
@@ -72,11 +72,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectData.cs" />
-    <Compile Include="AllForm\frmKhachHang.cs">
+    <Compile Include="AllForm\Room-Order-Payment\frmOrder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllForm\frmKhachHang.Designer.cs">
+    <Compile Include="AllForm\Room-Order-Payment\frmOrder.Designer.cs">
+      <DependentUpon>frmOrder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\ConnectData.cs" />
+    <Compile Include="AllForm\KH-NV-HD\frmKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AllForm\KH-NV-HD\frmKhachHang.Designer.cs">
       <DependentUpon>frmKhachHang.cs</DependentUpon>
     </Compile>
     <Compile Include="AllForm\InHoaDon\DataSetInHoaDon.cs">
@@ -99,28 +105,28 @@
     <Compile Include="AllForm\Main-Login-Register\frmMainUI.Designer.cs">
       <DependentUpon>frmMainUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="AllForm\frmHoaDon.cs">
+    <Compile Include="AllForm\KH-NV-HD\frmHoaDon.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllForm\frmHoaDon.Designer.cs">
+    <Compile Include="AllForm\KH-NV-HD\frmHoaDon.Designer.cs">
       <DependentUpon>frmHoaDon.cs</DependentUpon>
     </Compile>
-    <Compile Include="AllForm\frmNhanVien.cs">
+    <Compile Include="AllForm\KH-NV-HD\frmNhanVien.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllForm\frmNhanVien.Designer.cs">
+    <Compile Include="AllForm\KH-NV-HD\frmNhanVien.Designer.cs">
       <DependentUpon>frmNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="AllForm\frmPhong.cs">
+    <Compile Include="AllForm\Room-Order-Payment\frmPhong.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllForm\frmPhong.Designer.cs">
+    <Compile Include="AllForm\Room-Order-Payment\frmPhong.Designer.cs">
       <DependentUpon>frmPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="AllForm\frmThanhToan.cs">
+    <Compile Include="AllForm\Room-Order-Payment\frmThanhToan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllForm\frmThanhToan.Designer.cs">
+    <Compile Include="AllForm\Room-Order-Payment\frmThanhToan.Designer.cs">
       <DependentUpon>frmThanhToan.cs</DependentUpon>
     </Compile>
     <Compile Include="AllForm\InHoaDon\frmPrintBill.cs">
@@ -141,31 +147,34 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QLKaraokDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="SetParameters.cs" />
-    <Compile Include="TransData.cs" />
+    <Compile Include="Classes\SetParameters.cs" />
+    <Compile Include="Classes\TransData.cs" />
     <EmbeddedResource Include="AllForm\Main-Login-Register\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AllForm\Main-Login-Register\frmMainUI.resx">
       <DependentUpon>frmMainUI.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AllForm\frmHoaDon.resx">
+    <EmbeddedResource Include="AllForm\KH-NV-HD\frmHoaDon.resx">
       <DependentUpon>frmHoaDon.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AllForm\frmKhachHang.resx">
+    <EmbeddedResource Include="AllForm\KH-NV-HD\frmKhachHang.resx">
       <DependentUpon>frmKhachHang.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AllForm\frmNhanVien.resx">
+    <EmbeddedResource Include="AllForm\KH-NV-HD\frmNhanVien.resx">
       <DependentUpon>frmNhanVien.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AllForm\frmPhong.resx">
+    <EmbeddedResource Include="AllForm\Room-Order-Payment\frmPhong.resx">
       <DependentUpon>frmPhong.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AllForm\frmThanhToan.resx">
+    <EmbeddedResource Include="AllForm\Room-Order-Payment\frmThanhToan.resx">
       <DependentUpon>frmThanhToan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AllForm\InHoaDon\frmPrintBill.resx">
       <DependentUpon>frmPrintBill.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AllForm\Room-Order-Payment\frmOrder.resx">
+      <DependentUpon>frmOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -215,7 +224,10 @@
     <Folder Include="Resources\icon\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\background\Login1.png" />
+    <None Include="Resources\BackgroundImage\Login1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BackgroundImage\Menu.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
